# CORSMAL2021

./: .gitignore  .pep8  LICENSE  README.md  env.yml  run.py  train.py  utilities.py
task1and2/: .flake8  .gitignore  README.md  env.yml  inference.py  pyproject.toml  train.py
task1and2/corsmal_challenge/: __init__.py  utils.py
task1and2/corsmal_challenge/data/: audio.py  data_loader.py  dataset.py
task1and2/corsmal_challenge/models/: activation.py  audio.py  convolution.py  task1_2.py  transformer.py
task1and2/corsmal_challenge/train/: train_val.py
task1and2/data/: README.md  corsmal_data.csv
task1and2/experiments/: 20220109-memo_and_tests.ipynb  20220111-make-dataset.ipynb  20220111-make_pipeline.ipynb  20220111-training.py  20220111-training2-alt.py  20220111-training2-continue-alt.py  20220111-training2-continue.py  20220111-training2-continue2.py  20220111-training2.py  20220112-training3.py  20220114-memo_and_tests.ipynb  20220116-training.py  20220120-cv.py  20220120-detailed_validation.py  20220120-training-2.py  20220120-training.py  20220121-cv.py  20220127-model_validation.ipynb  20220127-model_validation2.ipynb  README.md
task3/: Makefile  README.md  config.py  dataset.py  inference.py  main.py  models.py  requirements.txt  utilities.py  video_processing.py
task3/libs/_3d/: projection.py
task3/libs/detection/: detection.py
task4/: dataset.py  inference.py  models.py  train.py  utilities.py
