[tool.poetry]
name = "corsmal_challenge"
version = "0.1.0"
description = "project for corsmal challenge"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.4,<3.11"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
torch = "^1.8.2"
torchvision = "^0.9.2"
torchaudio = "^0.8.2"
ipykernel = "^6.6.1"
torchinfo = "^1.6.1"
scikit-learn = "1.0.2"
seaborn = "0.11.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.930"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
